QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- Invalidation of the JACK client handle is now forced right on 
  jack_shutdown notification, preventing a most probable fatal
  crash due to jack_deactivate and/or jack_client_close being
  called after the jack_watchdog kicks in.

- Default font option names were adjusted to "Sans Serif" and
  "Monospace", wherever available.

- The "keep child windows always on top" option is not set as
  default anymore, because window focus behavior gets tricky
  on some desktop environments (eg. Mac OS X, Gnome).

- Autoconf (configure) scripting gets an update.
 

0.2.22   2007-03-31  Long overdue but better late than never.

- Fixed default settings for the freebob backend (JACK >= 0.103.0).

- CPU Load status label now says correctly DSP Load.

- The most recently used patchbay definitions can now be correctly
  selected in round-robin fashion from its drop-down list widget.

- Avoid mixing JACK MIDI ports with regular audio ports on the
  Connections and Patchbay widgets; strictly list only audio ports.

- Added 192k sample rate to setup settings drop down list (as kindly
  reminded by Klaus Zimmermann, thanks).

- Most top-level widgets were missing the normal-widget flag, which
  were causing some sticky size behavior on some window managers.


0.2.21   2006-10-07  Shrinking on screen real-estate.

- GPL address update.

- All window captions can now be set smaller as tool-widgets. This
  option takes effect when child windows are kept always on top.

- For the brave of heart, specially the ones brave enough to try with
  Stephane Letz's jackdmp, a win32 build should be now possible.

- The main window button text labels are now optional (after a kind
  suggestion by Geoff Beasley, thanks).

- Increse default maximum number of ports setting from 128 to 256.

- Initial freebob backend driver support. Also changed the coreaudio