@@ -1,9 +1,9 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(QjackCtl, 0.2.22.3, rncbc@rncbc.org, qjackctl)
+AC_INIT(QjackCtl, 0.2.22.4, rncbc@rncbc.org, qjackctl)
 
 AC_CONFIG_SRCDIR(src/qjackctlMainForm.ui.h)
 AC_CONFIG_HEADERS(config.h)
-AC_CONFIG_FILES(Makefile qjackctl.pro qjackctl.spec)
+AC_CONFIG_FILES(Makefile qjackctl.pro qjackctl.spec qjackctl.desktop)
 
 # Set default installation prefix.
 AC_PREFIX_DEFAULT(/usr/local)
