@@ -1,7 +1,7 @@
 %define name    @PACKAGE_TARNAME@
 %define version @PACKAGE_VERSION@
-%define release 2
-%define prefix  /usr/local
+%define release 3
+%define prefix  @ac_prefix@
 
 Summary:	JACK Audio Connection Kit Qt GUI Interface.
 Name:		%{name}
@@ -12,43 +12,54 @@ License:	GPL
 Group:		Sound
 Source0:	%{name}-%{version}.tar.gz
 URL:		http://qjackctl.sourceforge.net/
-BuildRoot:	/var/tmp/%{name}-%{version}-buildroot
+
+BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-buildroot
+
+Requires:	qt3 >= 3.1
 Requires:	jack >= 0.100.0
+Requires:	alsa
+
+BuildRequires:	qt3-devel >= 3.1
+BuildRequires:	jack-devel >= 0.100.0
+BuildRequires:	alsa-devel
 
 %description
 JACK Audio Connection Kit - Qt GUI Interface: A simple Qt application
-to control the JACK server daemon. Written in C++ around the Qt3 toolkit
-for X11, most exclusively using Qt Designer. Provides a simple GUI dialog
-for setting several JACK daemon parameters, which are properly saved
-between sessions, and a way control of the status of the audio server
-daemon. With time, this primordial interface has become richer by 
+to control the JACK server. Written in C++ around the Qt3 toolkit
+for X11, most exclusively using Qt Designer. Provides a simple GUI
+dialog for setting several JACK server parameters, which are properly
+saved between sessions, and a way control of the status of the audio
+server. With time, this primordial interface has become richer by 
 including a enhanced patchbay and connection control features.
 
 %prep
-
 %setup
-[ -f Makefile.cvs ] && make -f Makefile.cvs
+[ -f Makefile.cvs ] && %__make -f Makefile.cvs
 
 %build
 export PATH=$QTDIR/bin:$PATH
-./configure --prefix=%{prefix}
-make
+%configure
+%__make
 
 %install
-if [ -d $RPM_BUILD_ROOT ]; then rm -rf $RPM_BUILD_ROOT; fi
-mkdir -p $RPM_BUILD_ROOT
-make prefix=$RPM_BUILD_ROOT%{prefix} install
+%makeinstall
 
 %clean
-if [ -d $RPM_BUILD_ROOT ]; then rm -rf $RPM_BUILD_ROOT; fi
+[ -d %{buildroot} -a "%{buildroot}" != "" ] && %__rm -rf  %{buildroot}
 
 %files
 %defattr(-,root,root)
 %doc AUTHORS COPYING ChangeLog README TODO
-%{prefix}/bin/qjackctl
-%{prefix}/share/icons/qjackctl.png
+%{_bindir}/%{name}
+%{_datadir}/applications/%{name}.desktop
+%{_datadir}/pixmaps/%{name}.png
 
 %changelog
+* Mon Jun 25 2007 Rui Nuno Capela <rncbc@users.sourceforge.net>
+- Application icon is now installed to (prefix)/share/pixmaps.
+- Declared fundamental build and run-time requirements.
+- Destination install directory prefix is now in spec.
+- Spec is now a bit more openSUSE compliant.
 * Wed May 31 2006 Rui Nuno Capela <rncbc@users.sourceforge.net>
 - Changed copyright to license attribute
 * Wed Aug 24 2005 Rui Nuno Capela <rncbc@users.sourceforge.net>
